platform/addons/network-policies/orders-allow-users-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-user-service-ingress
  namespace: polaris-apps
spec:
  podSelector:
    matchLabels:
      app: user-service
  policyTypes:
  - Ingress
  ingress:
  - from:
    # allow ingress controller
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx

    # allow order-service
    - podSelector:
        matchLabels:
          app: order-service

    # allow debug pod
    - podSelector:
        matchLabels:
          app: debug

    ports:
    - protocol: TCP
      port: 8000
