platform/addons/network-policies/user-and-order-allows-postgres-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-postgres-from-apps
  namespace: polaris-data
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: polaris-apps
      podSelector:
        matchLabels:
          app: user-service
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: polaris-apps
      podSelector:
        matchLabels:
          app: order-service
    ports:
    - protocol: TCP
      port: 5432
